[project]
name = "amaze-benchmarker"
version = "1.0rc0"
authors = [{ name="Kevin Godin-Dubois", email="k.j.m.godin-dubois@vu.nl"}]
description = "Benchmark generator for sighted maze-navigating agents"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 3 - Alpha",
  
  "Programming Language :: Python :: 3 :: Only",

  "License :: OSI Approved :: MIT License",

  "Operating System :: Unix",

  "Intended Audience :: Science/Research", 
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Artificial Life",
]
dependencies = [
  "numpy",
  "pandas",
  "PyQt5"
]

[project.urls]
Homepage = "https://github.com/kgd-al/amaze"
Documentation = "https://amaze.readthedocs.io/"
"Bug Tracker" = "https://github.com/kgd-al/amaze/issues"

[project.scripts]
amaze = "amaze.bin.main:main"
amaze-stats = "amaze.bin.tools.stats:main"
amaze-interpolate = "amaze.bin.tools.interpolator:main"

[build-system]
requires = [
  "setuptools>=65.0",
  "setuptools_scm[toml]",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
sb3 = [
  "stable_baselines3",
  "graphviz"
]

full = [
  "amaze[sb3]"
]

tests = [
  "amaze[full]",
  "pytest",
  "pytest-steps", "pytest-sugar",
  "coverage",
  "flake8",
]

docs = [
  "amaze[full]",              # Document everything, *everything*
  "sphinx",
  "sphinx-pyproject",         # Auto-extract project version
  "sphinx_qt_documentation",  # Link with qt documentation
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
testpaths = ["tests"]
